--- a/src/App.css
+++ b/src/App.css
@@ -25,16 +25,21 @@ body {
   margin-top: 0px;
 }
 
-.drivers--titles {
+.titles {
   display: flex;
   align-items:baseline;
 }
 
-.drivers--text {
+.text {
   margin-right: 20px;
 }
 
-.drivers--data {
+.data {
   display: flex;
   flex-wrap: wrap;
 }
+/* 
+.data--table {
+  height: 1vh;
+  width: .5vw;
+} */
